# Golf-app

./: .replit  _redirects  app.py  netlify.toml  pyproject.toml  replit.md
.upm/: store.json
static/css/: style.css
static/js/: app.js
templates/: index.html
